--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
